--- a/index.html
+++ b/index.html
@@ -8,5 +8,23 @@
         <p>
             <a>Download Excursion (Coming soon!)</a>
         </p>
+        <video autoplay muted loop>
+            <source src="./resources/videos/excursion.mp4" type="video.mp4">
+        </video>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <p>
+            <img href="./resources/images/camp.jpg">
+        </p>
+        <p>
+            <img href="./resources/images/phone.png">
+        </p>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <p>
+            <a>Download Excursion (Coming soon!)</a>
+        </p>
+        <div class="footer">
+            <p>© Excursion</p>
+        </div>
     </body>
 </html>
